# almo-mcf-rs

./: CHANGELOG.md  CONTRIBUTING.md  DESIGN_SPEC.md  README.md  RELEASE_NOTES.md  TASKS.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  (+2 more)
docs/: derandomization.md  math_notes.md
examples/: almo_usage.py  networkx_quickstart.py
python/: real_world_scenarios.py
rust/: Cargo.toml
rust/crates/almo-mcf-core/: Cargo.toml
rust/crates/almo-mcf-core/benches/: bench_ipm.rs  convex_applications.rs  convex_extensions.rs  decremental_spanner.rs  dynamic_oracle.rs  forests.rs  full_suite.rs  ipm_almost_linear.rs  rebuilding_amortized.rs  trees.rs
rust/crates/almo-mcf-core/src/: lib.rs  scaling.rs  solver.rs
rust/crates/almo-mcf-core/src/convex/: mod.rs
rust/crates/almo-mcf-core/src/data_structures/: chain.rs  decremental_spanner.rs  embedding.rs  lsd.rs  mod.rs  sparsified_core.rs
rust/crates/almo-mcf-core/src/graph/: core.rs  graph.rs  matrix.rs  min_cost_flow.rs  mod.rs  residual.rs  undirected.rs
rust/crates/almo-mcf-core/src/hsfc/: derand.rs  game.rs  lazy.rs  mod.rs  properties.rs
rust/crates/almo-mcf-core/src/ipm/: mod.rs  potential.rs  rebuilding.rs  search.rs  termination.rs
rust/crates/almo-mcf-core/src/min_ratio/: branching_tree_chain.rs  dynamic.rs  hsfc.rs  mod.rs  oracle.rs  static_oracle.rs
rust/crates/almo-mcf-core/src/numerics/: barrier.rs  gradient.rs  mod.rs  vec_ops.rs
rust/crates/almo-mcf-core/src/rebuilding/: mod.rs
rust/crates/almo-mcf-core/src/rounding/: mod.rs  residual.rs
rust/crates/almo-mcf-core/src/scaling/: capacity.rs  cost.rs  mod.rs  utils.rs
rust/crates/almo-mcf-core/src/spanner/: construction.rs  decremental.rs  dynamic.rs  integration.rs  mod.rs  oracle.rs  params.rs
rust/crates/almo-mcf-core/src/trees/: deterministic.rs  dynamic.rs  forest.rs  hierarchy.rs  lsst.rs  mod.rs  mwu.rs  shift.rs
rust/crates/almo-mcf-core/tests/: convex_extensions.rs  decremental_spanner.rs  dynamic_oracle.rs  dynamic_update_checklist.rs  forests_random.rs  full_chain_data_structures.rs  graph.rs  hsfc_adversarial.rs  integration_convex_apps.rs  integration_enhanced_ipm.rs  integration_ipm_dynamic.rs  integration_rebuilding_mcf.rs  ipm.rs  ipm_small.rs  lsst_forest.rs  min_ratio.rs  min_ratio_queries.rs  numerical.rs  numerics.rs  rebuilding_game.rs  rebuilding_integration_checklist.rs  reproducibility.rs  rounding.rs  scaling.rs  scaling_large.rs  spanner.rs  spanner_decremental.rs  termination.rs  test_amortized_guarantees.rs  test_derandomized_reproducibility.rs  test_dynamic_embeddings.rs  test_full_pipeline_determinism.rs  test_ipm_telemetry.rs  test_iteration_optimization.rs  test_one_step_potential_drop.rs  test_oracle_rebuilding_integration.rs  test_rebuilding_game_rounds.rs  test_scaling_reductions.rs  test_stability_and_init.rs  test_telemetry_export.rs  (+1 more)
rust/crates/almo-mcf-py/: Cargo.toml
rust/crates/almo-mcf-py/src/: lib.rs
scripts/: pypi_smoke_test.sh
tests/: __init__.py  bench_almost_linear.py  bench_deterministic_scaling.py  bench_ipm_vs_networkx.py  bench_ipm_vs_ssp.py  conftest.py  regression_seeds.py  requirements.txt  test_against_networkx.py  test_benchmarks.py  test_core_api.py  test_correctness_small.py  test_deterministic_mode.py  test_extensions.py  test_infeasible.py  test_ipm.py  test_ipm_random_parity.py  test_numerical_stability.py  test_nx_adapter.py  test_property_randomized.py  test_public_api.py  test_regression_known_instances.py  test_release_metadata.py  test_runtime_log.csv  test_scalability.py  test_scaling.py  test_smoke.py
(+8 files in other folders)
