[package]
name = "almo-mcf-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rayon = { version = "1.10", optional = true }

[features]
parallel = ["dep:rayon"]
simd = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_ipm"
harness = false

[[bench]]
name = "trees"
harness = false
