[package]
name = "almo-mcf-core"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
rayon = "1.10"

[features]
parallel = []
simd = []
spanner-l-test = []

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "bench_ipm"
harness = false

[[bench]]
name = "trees"
harness = false

[[bench]]
name = "forests"
harness = false

[[bench]]
name = "decremental_spanner"
harness = false
